# polTorrent

./: README.md  libtorrent_license.txt
polTorrent/: Makefile  polTorrent.workspace
polTorrent - Cmake/: CMakeLists.txt
polTorrent - Cmake/src/: main.cpp
polTorrent/build-Debug/polTorrent/: ObjectsList.txt  main.cpp.o.d
polTorrent/polTorrent/: compile_flags.txt  main.cpp  polTorrent.mk  polTorrent.project
